Added the Sort Filter into Web Version going to change the properties of the filter and get them working now

--- a/Resources/CSS/homepage.css
+++ b/Resources/CSS/homepage.css
@@ -48,7 +48,7 @@
 }
 
 .coffee_sm_pics_container h1 , .yellow_sm_pics_container h1 , .blue_sm_pics_container h1 , .abstract_sm_pics_container h1{
-    font-family: fantasy;
+    font-weight: 200;
     margin-bottom: 1em;
 }
 
