Changed up the Google Sheet to include a few more columns(Medium , Size) which I need for the sorters  and have it easier for Aisling now , changed prices aswell. Going to work on sorters now

--- a/Resources/CSS/shop.css
+++ b/Resources/CSS/shop.css
@@ -119,6 +119,9 @@
 
 .Product_Details {
     padding-bottom: 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .Product_Details.not_applicable{
