Half got the Medium Filter Working , weird bug here trying to fix now

--- a/Resources/CSS/shop.css
+++ b/Resources/CSS/shop.css
@@ -124,7 +124,9 @@
     align-items: center;
 }
 
-.Product_Details.not_applicable{
+.Product_Details.not_applicable,
+.Product_Details.does_not_apply
+{
     display:none;
 }
 
