--- a/Resources/CSS/basics.css
+++ b/Resources/CSS/basics.css
@@ -42,6 +42,7 @@ a:hover{
 } */
 
 input[type="text"], 
+input[type="password"], 
 input[type="email"] , 
 input[type="tel"] ,
 select,
@@ -69,6 +70,7 @@ b{
 
 @media ( max-width: 600px ) {
     input[type="text"], 
+    input[type="password"], 
     input[type="email"] , 
     input[type="tel"] ,
     select,
