Fixed the weird bug and we are back on track for the 17th

--- a/Resources/CSS/footer.css
+++ b/Resources/CSS/footer.css
@@ -35,21 +35,8 @@
     width: 5vw;
     margin-left: 2em;
     border-radius: 50%;
-    background: peachpuff;
+    background: #F89685;
 }
-
-/* .colour_of_month_collage {
-    display: flex;
-}
-
-.colour_of_month_collage img {
-    width: 20vw;
-    margin-right: 1vw;
-} */
-
-
-
-
 
 
 .footer {
